[gd_scene load_steps=8 format=3 uid="uid://c30q3eqsp7xno"]

[ext_resource type="Texture2D" uid="uid://c3y81qupv3x6l" path="res://ZenvaChallenges/4. TappyPlane/Assets-TappyPlane/Coin.png" id="1_124sl"]
[ext_resource type="Script" uid="uid://bi48j3sfolmoi" path="res://ZenvaChallenges/4. TappyPlane/Scripts/Prefab/coin.gd" id="1_dw6x2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_124sl"]
radius = 102.044

[sub_resource type="Animation" id="Animation_fep6h"]
resource_name = "CoinCollected"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Coin:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -130.605)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Coin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2.5, 2.5), Vector2(2.5, 2.5), Vector2(0.2, 0.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Coin:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667, 0.233333, 0.3, 0.366667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.610865, 0.60912, -0.244346, 0.242601]
}

[sub_resource type="Animation" id="Animation_wosyq"]
resource_name = "Idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Coin:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -15), Vector2(0, 0), Vector2(0, 15)]
}

[sub_resource type="Animation" id="Animation_1ul3d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Coin:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Coin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Coin:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ul3d"]
_data = {
&"CoinCollected": SubResource("Animation_fep6h"),
&"Idle": SubResource("Animation_wosyq"),
&"RESET": SubResource("Animation_1ul3d")
}

[node name="Area2D" type="Area2D" groups=["Collectables", "DynamicObjects"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_dw6x2")

[node name="Coin" type="Sprite2D" parent="."]
texture = ExtResource("1_124sl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_124sl")

[node name="CoinCollected" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1ul3d")
}
autoplay = "Idle"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="CoinCollected" to="." method="_on_coin_collected_animation_finished"]
